# laptop-placer

./: .pre-commit-config.yaml  README.md  laptop_placer.py  main.py  mile.txt  sarosh.txt  setup.cfg
