[metadata]
name = laptop-placer
version = 1.0.0
description = Command line tool for automagic placement of your macOS laptop on the given side of your external monitor.
author = Fredrik Mile
author_email = fredrik.mile@gmail.com
url = https://github.com/mile95/laptop-placer

[options.entry_points]
console_scripts =
	laptop-placer = laptop_placer:main
